syntax = "proto3";

package spine.test.code.js;

import "google/protobuf/any.proto";

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";

message FieldContainer {
    string singular_field = 1;
    repeated string repeated_field = 2;
    map<int64, string> map_field = 3;

    int32 primitive_field = 4;
    google.protobuf.Any message_field = 5;
    TaskType enum_field = 6;
}

enum TaskType {
    CREATE = 0;
    READ = 1;
    UPDATE = 2;
    DELETE = 3;
}
